# flutter_serial_communication

example/: pubspec.yaml
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
plug/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
plug/lib/: flutter_serial_communication.dart  implementation.dart
plug_android_support/: README.md  pubspec.yaml
plug_android_support/android/src/main/java/id/farellsujanto/flutter_serial_communication/: FlutterSerialCommunication.java  USBGrantReceiver.java
plug_android_support/lib/: flutter_serial_communication_android_support.dart
plug_desktop_support/: .metadata  README.md  ffigen.yaml  pubspec.yaml
plug_desktop_support/lib/: bindings.g.dart  config.dart  dylib.dart  flutter_serial_communication_desktop_support.dart  port.dart  reader.dart  util.dart
plug_desktop_support/linux/: CMakeLists.txt
plug_desktop_support/macos/: flutter_serial_communication_desktop_support.podspec
plug_desktop_support/macos/Classes/: flutter_serial_communication_desktop_support.swift
plug_desktop_support/src/: CMakeLists.txt  flutter_serial_communication_desktop_support.c
plug_desktop_support/windows/: CMakeLists.txt
plug_platform_interface/: README.md  pubspec.yaml
plug_platform_interface/lib/: default.dart  device.dart  interface.dart
